ajuste de rutas para compatibilidad maven/eclipse

--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -4,9 +4,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>rpg</groupId>
-  <artifactId>rpg</artifactId>
+  <groupId>Rpg</groupId>
+  <artifactId>Rpg</artifactId>
   <version>1.0</version>
+  <packaging>jar</packaging>
 
   <name>Rpg</name>
   <!-- FIXME change it to the project's website -->
@@ -28,7 +29,12 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+  	<resources>
+       <resource>
+          <directory>src/main/resources</directory>
+       </resource>
+  	</resources>
+   	<pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
