--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -20,6 +20,38 @@
   </properties>
 
   <dependencies>
+  <!-- DB dependencies -->
+  	<dependency>
+		<groupId>org.datanucleus</groupId>
+		<artifactId>datanucleus-core</artifactId>
+		<version>[5.1.6, 5.9)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.datanucleus</groupId>
+		<artifactId>datanucleus-api-jdo</artifactId>
+		<version>[5.1.4, 5.9)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.datanucleus</groupId>
+		<artifactId>datanucleus-rdbms</artifactId>
+		<version>[5.1.6, 5.9)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.datanucleus</groupId>
+		<artifactId>javax.jdo</artifactId>
+		<version>[3.2.0-m8, )</version>
+	</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>8.0.23</version>
+	</dependency>
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>[1.2.17, )</version>
+	</dependency>	
+		
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
