--- a/Rpg/src/main/resources/datanucleus.properties
+++ b/Rpg/src/main/resources/datanucleus.properties
@@ -3,11 +3,10 @@ datanucleus.metadata.validate=false
 
 # Enable these lines if persisting to RDBMS (MySQL)
 javax.jdo.option.ConnectionDriverName=com.mysql.cj.jdbc.Driver
-javax.jdo.option.ConnectionURL=jdbc:mysql://localhost/gameDB?verifyServerCertificate=false&useSSL=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-javax.jdo.option.ConnectionUserName=grupo1
-javax.jdo.option.ConnectionPassword=afterage
+javax.jdo.option.ConnectionURL=jdbc:mysql://localhost/gamedb?verifyServerCertificate=false&useSSL=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+javax.jdo.option.ConnectionUserName=rpg
+javax.jdo.option.ConnectionPassword=rpg
 javax.jdo.option.Mapping=mysql
 datanucleus.schema.autoCreateAll=true
-# datanucleus.autoCreateSchema=true
 datanucleus.validateTables=false
 datanucleus.validateConstraints=false
