--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -116,7 +116,7 @@
 						</execution>
 					</executions>
 					<configuration>
-						<mainClass>db.MainDB</mainClass>
+						<mainClass>rpg.App</mainClass>
 					</configuration>
 				</plugin>
 				<plugin>
