--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>Rpg</groupId>
 	<artifactId>Rpg</artifactId>
-	<version>2.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Rpg</name>
@@ -15,6 +15,7 @@
 	<url>http://www.example.com</url>
 
 	<properties>
+		<jersey.version>3.0.1</jersey.version>
 		<config.files.dir>${basedir}/src/main/resources</config.files.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
@@ -22,7 +23,33 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
+<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.glassfish.jersey</groupId>
+				<artifactId>jersey-bom</artifactId>
+				<version>${jersey.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
 	<dependencies>
+	<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-grizzly2-http</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-binding</artifactId>
+		</dependency>
 		<!-- DB dependencies -->
 		<dependency>
 			<groupId>org.datanucleus</groupId>
