--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -140,7 +140,15 @@
 						</execution>
 					</executions>
 				</plugin>
-
+				<!-- Test integracion -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M5</version>
+					<configuration>
+						<excludedGroups>categories.IntegrationTest</excludedGroups>
+					</configuration>			 
+				</plugin>
 				<!-- Main exec -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -203,7 +211,35 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-
+	
+	<profiles>	
+ 		<profile>
+			<id>integracion</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.22.0</version>
+						<configuration>
+							<includes>
+								<include>**/*</include>
+							</includes>
+							<groups>categories.IntegrationTest</groups>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	
 	<reporting>
 		<plugins>
 			<plugin>
