--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -92,6 +92,12 @@
 			<artifactId>mockito-core</artifactId>
 			<version>2.18.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.databene</groupId>
+			<artifactId>contiperf</artifactId>
+			<version>2.3.4</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
