Cambios en el pom y ajuste en el dtanucleus

--- a/Rpg/src/main/resources/datanucleus.properties
+++ b/Rpg/src/main/resources/datanucleus.properties
@@ -3,7 +3,7 @@ datanucleus.metadata.validate=false
 
 # Enable these lines if persisting to RDBMS (MySQL)
 javax.jdo.option.ConnectionDriverName=com.mysql.cj.jdbc.Driver
-javax.jdo.option.ConnectionURL=jdbc:mysql://localhost/gamedb?verifyServerCertificate=false&useSSL=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+javax.jdo.option.ConnectionURL=jdbc:mysql://localhost/gamedb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 javax.jdo.option.ConnectionUserName=rpg
 javax.jdo.option.ConnectionPassword=rpg
 javax.jdo.option.Mapping=mysql
