--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -188,23 +188,23 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.7</version>
-				<configuration>
-					<excludes>
-						<exclude>**/*com/test/vaquar/khan/HealthChecker.class</exclude>
-					</excludes>
-					<rules>
-						<rule>
-							<element>PACKAGE</element>
-							<limits>
-								<limit>
-									<counter>LINE</counter>
-									<value>COVEREDRATIO</value>
-									<minimum>0.50</minimum>
-								</limit>
-							</limits>
-						</rule>
-					</rules>
-				</configuration>
+<!-- 				<configuration> -->
+<!-- 					<excludes> -->
+<!-- 						<exclude></exclude> -->
+<!-- 					</excludes> -->
+<!-- 					<rules> -->
+<!-- 						<rule> -->
+<!-- 							<element>PACKAGE</element> -->
+<!-- 							<limits> -->
+<!-- 								<limit> -->
+<!-- 									<counter>LINE</counter> -->
+<!-- 									<value>COVEREDRATIO</value> -->
+<!-- 									<minimum>0.50</minimum> -->
+<!-- 								</limit> -->
+<!-- 							</limits> -->
+<!-- 						</rule> -->
+<!-- 					</rules> -->
+<!-- 				</configuration> -->
 				<executions>
 					<execution>
 						<id>prepare-agent</id>
