--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -188,23 +188,23 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.7</version>
-<!-- 				<configuration> -->
-<!-- 					<excludes> -->
-<!-- 						<exclude></exclude> -->
-<!-- 					</excludes> -->
-<!-- 					<rules> -->
-<!-- 						<rule> -->
-<!-- 							<element>PACKAGE</element> -->
-<!-- 							<limits> -->
-<!-- 								<limit> -->
-<!-- 									<counter>LINE</counter> -->
-<!-- 									<value>COVEREDRATIO</value> -->
-<!-- 									<minimum>0.50</minimum> -->
-<!-- 								</limit> -->
-<!-- 							</limits> -->
-<!-- 						</rule> -->
-<!-- 					</rules> -->
-<!-- 				</configuration> -->
+				<!-- <configuration> -->
+				<!-- <excludes> -->
+				<!-- <exclude></exclude> -->
+				<!-- </excludes> -->
+				<!-- <rules> -->
+				<!-- <rule> -->
+				<!-- <element>PACKAGE</element> -->
+				<!-- <limits> -->
+				<!-- <limit> -->
+				<!-- <counter>LINE</counter> -->
+				<!-- <value>COVEREDRATIO</value> -->
+				<!-- <minimum>0.50</minimum> -->
+				<!-- </limit> -->
+				<!-- </limits> -->
+				<!-- </rule> -->
+				<!-- </rules> -->
+				<!-- </configuration> -->
 				<executions>
 					<execution>
 						<id>prepare-agent</id>
@@ -241,6 +241,15 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.7.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<show>private</show>
+					<nohelp>true</nohelp>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
