--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -84,7 +84,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -188,23 +188,20 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.7</version>
-				<!-- <configuration> -->
-				<!-- <excludes> -->
-				<!-- <exclude></exclude> -->
-				<!-- </excludes> -->
-				<!-- <rules> -->
-				<!-- <rule> -->
-				<!-- <element>PACKAGE</element> -->
-				<!-- <limits> -->
-				<!-- <limit> -->
-				<!-- <counter>LINE</counter> -->
-				<!-- <value>COVEREDRATIO</value> -->
-				<!-- <minimum>0.50</minimum> -->
-				<!-- </limit> -->
-				<!-- </limits> -->
-				<!-- </rule> -->
-				<!-- </rules> -->
-				<!-- </configuration> -->
+				<configuration>
+					<rules>
+						<rule>
+							<element>CLASS</element>
+							<limits>
+								<limit>
+									<counter>LINE</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>50%</minimum>
+								</limit>
+							</limits>
+						</rule>
+					</rules>
+				</configuration>
 				<executions>
 					<execution>
 						<id>prepare-agent</id>
