--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -163,7 +163,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 				<configuration>
-					<excludedGroups>test.IntegrationTest</excludedGroups>
+					<excludedGroups>categories.IntegrationTest</excludedGroups>
 				</configuration>
 			</plugin>
 			<!-- Main exec -->
