--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -26,15 +26,14 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Prepare database for integration tests
+      - name: Database
         run: | 
           sudo /etc/init.d/mysql start
           mysql -uroot -proot < src/main/resources/database.sql
           mvn --batch-mode --update-snapshots compile 
           mvn --batch-mode --update-snapshots datanucleus:enhance
           mvn --batch-mode --update-snapshots datanucleus:schema-create
-          mvn --batch-mode --update-snapshots exec:java -Pdatos
-      - name: Build with Maven including integration tests
+      - name: Integration test
         run: mvn --batch-mode --update-snapshots verify -Pintegracion
 
       - name: Retrieve version
