--- a/.github/workflows/javaDoc.yml
+++ b/.github/workflows/javaDoc.yml
@@ -20,6 +20,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: cd Rpg
         run: mvn --batch-mode --update-snapshots test org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
       - uses: codecov/codecov-action@v1
