--- a/.github/workflows/javaDoc.yml
+++ b/.github/workflows/javaDoc.yml
@@ -8,10 +8,10 @@ on: [push]
 jobs:
   build:
     runs-on: windows-latest
-  defaults:
+    defaults:
       run:
         working-directory: C:\Users\xabie\git\JuegoRpg\Rpg
-  steps:
+    steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.11
         uses: actions/setup-java@v1
@@ -22,21 +22,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: cd Rpg
         run: mvn --batch-mode --update-snapshots test org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
       - uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Database
+      - name: Prepare database for integration tests
         run: | 
           sudo /etc/init.d/mysql start
           mysql -uroot -proot < src/main/resources/database.sql
           mvn --batch-mode --update-snapshots compile 
           mvn --batch-mode --update-snapshots datanucleus:enhance
           mvn --batch-mode --update-snapshots datanucleus:schema-create
-      - name: Integration test
+
+      - name: Build with Maven including integration tests
         run: mvn --batch-mode --update-snapshots verify -Pintegracion
 
       - name: Retrieve version
