Cambios en el Pom para sonar

--- a/Rpg/pom.xml
+++ b/Rpg/pom.xml
@@ -114,6 +114,12 @@
 			<version>1.7.25</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+		<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -311,6 +317,18 @@
 	</build>
 
 	<profiles>
+		<profile>
+			<id>sonar</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<!-- Optional URL to server. Default value is http://localhost:9000 -->
+				<sonar.host.url>
+					http://192.168.2.174:9000
+				</sonar.host.url>
+			</properties>
+		</profile>
 		<profile>
 			<id>integracion</id>
 			<build>
