--- a/.github/workflows/javaDoc.yml
+++ b/.github/workflows/javaDoc.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           java-version: 1.11
 
-      - name: Build with Maven including only unit testing (with SonarCloud)
-        run: mvn --batch-mode --update-snapshots test org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+      - name: Build proyect
+        run: mvn clean test
 
       - uses: codecov/codecov-action@v1
       - name: Prepare database for integration tests
