--- a/.github/workflows/javaDoc.yml
+++ b/.github/workflows/javaDoc.yml
@@ -3,52 +3,40 @@
 
 name: Java CI with Maven, tests and documentation generation
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     defaults:
-      run:
+     run:
         working-directory: ./rpg
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
-
-      - name: Build proyect
-        run: mvn clean test
-
-      - uses: codecov/codecov-action@v1
-      - name: Prepare database for integration tests
-        run: | 
-          sudo /etc/init.d/mysql start
-          mysql -uroot -proot < src/main/resources/database.sql
-          mvn --batch-mode --update-snapshots compile 
-          mvn --batch-mode --update-snapshots datanucleus:enhance
-          mvn --batch-mode --update-snapshots datanucleus:schema-create
-
-      - name: Build with Maven including integration tests
-        run: mvn --batch-mode --update-snapshots verify -Pintegracion
-
-      - name: Retrieve version
-        run: echo "::set-output name=TAG_NAME::$(mvn org.apache.maven.plugins:maven-help-plugin:3.1.0:evaluate -Dexpression=project.version -q -DforceStdout)"
-        id: version
-
-      - uses: dev-drprasad/delete-tag-and-release@v0.1.3
-        with:
-          delete_release: true
-          tag_name: ${{ steps.version.outputs.TAG_NAME }}
-     
-
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: target/simple-service-${{ steps.version.outputs.TAG_NAME }}.jar
-          asset_name: simple-service-${{ steps.version.outputs.TAG_NAME }}.jar
-          tag: ${{ steps.version.outputs.TAG_NAME }}
-          release_name: ${{ steps.version.outputs.TAG_NAME }}
-          overwrite: true
+    - uses: actions/checkout@v2
+    
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+           
+    - name: Install doxygen
+      run: sudo apt-get install -y doxygen
+      
+    - name: Install graphviz
+      run: sudo apt-get install -y graphviz
+      
+    - name: Test with Maven
+      run: mvn test -DargLine="-Dcontiperf.active=false"
+      
+    - name: Generate documentation
+      run: mvn doxygen:report
+      
+    - name: Publish on Github Pages
+      uses: crazy-max/ghaction-github-pages@v2.3.0
+      with:
+        build_dir: target/doxygen/html
