--- a/.github/workflows/javaDoc.yml
+++ b/.github/workflows/javaDoc.yml
@@ -1,6 +1,8 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
+
+    
 name: Java CI
 
 on: [push]
@@ -9,8 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     defaults:
-      run:
-        working-directory: ./rpg
+     run:
+      working-directory: ./rpg
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.11
@@ -19,9 +21,14 @@ jobs:
           java-version: 1.11
 
       - name: Build with Maven including only unit testing (with SonarCloud)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn --batch-mode --update-snapshots test org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
       - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Prepare database for integration tests
         run: | 
